k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  namespace: bingeo-app
spec:
  selector:
    app: identity-service
    type: api
  ports:
    - port: 3001
      targetPort: 3001
