k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: identity-route
  namespace: bingeo-app
spec:
  parentRefs:
    - name: bingeo-gateway
      namespace: bingeo-envoy-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/identity
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /api
      backendRefs:
        - name: identity-service
          port: 3001
